<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal">

    <ImageView
        android:layout_width="500dp"
        android:layout_height="350dp"
        android:src="@drawable/fuel_station"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textColor="@color/purple"
        android:textSize="35sp"
        android:textStyle="bold"
        android:letterSpacing="0.03"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:text="@string/email"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:text="@string/password"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:text="@string/confirm_password"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <EditText
        android:id="@+id/role"
        android:layout_width="350dp"
        android:layout_height="45dp"
        android:background="@drawable/forget"
        android:text="@string/role"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="20dp"
        android:paddingLeft="20dp"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:background="@drawable/button"
        android:text="@string/register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="#FFF"
        android:layout_marginTop="25dp"/>

    <TextView
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account_sign_in"
        android:textColor="@color/purple"
        android:textStyle="bold"
        android:textSize="18sp"
        android:layout_marginTop="15dp"/>

</LinearLayout>