<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minHeight="100dp"
    app:cardElevation="1dp"
    android:layout_margin="8dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="18sp"
        android:padding="2sp">

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/availableStock"
                android:text="@string/available_stock"
                android:textAlignment="center"
                android:layout_weight="2.5"
                android:textColor="#8c8c8c"
                android:textSize="16sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.1"
                android:textAlignment="center"
                android:text="@string/split"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/txtAvailableStock"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="2.5"
                android:textAlignment="textStart"
                android:text="@string/_15000_litres"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6sp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/arrivalTime"
                android:text="@string/arrival_time_"
                android:textColor="#8c8c8c"
                android:textSize="16sp"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/finishTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/finish_time"
                android:textColor="#8c8c8c"
                android:textSize="16sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:paddingBottom="6sp">

            <TextView
                android:id="@+id/txtArrivalTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_15"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="17sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txtFinishTime"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:text="@string/_15"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="16sp"
                android:textStyle="bold" />

        </TableRow>
    </TableLayout>


</androidx.cardview.widget.CardView>